--- a/KuTech/about.html
+++ b/KuTech/about.html
@@ -34,16 +34,16 @@
 				<!-- PC: Menu -->
 				<ul class="header-pc-menu d-md-flex d-none">
 					<!-- Item -->
-					<li class="header-pc-menu__item current-menu-item"><a href="#">About Us</a></li>
+					<li class="header-pc-menu__item current-menu-item"><a href="about.html">About Us</a></li>
 
 					<!-- Item -->
-					<li class="header-pc-menu__item"><a href="#">Equipment</a></li>
+					<li class="header-pc-menu__item"><a href="equipment.html">Equipment</a></li>
 
 					<!-- Item -->
-					<li class="header-pc-menu__item"><a href="#">Solutions</a></li>
+					<li class="header-pc-menu__item"><a href="solutions.html">Solutions</a></li>
 
 					<!-- Item -->
-					<li class="header-pc-menu__item"><a href="#">Contact</a></li>
+					<li class="header-pc-menu__item"><a href="contact.html">Contact</a></li>
 				</ul>
 
 				<!-- PC: language -->
@@ -123,7 +123,7 @@
 			<!-- Row -->
 			<div class="d-flex flex-wrap">
 				<!-- Column -->
-				<div class="col-lg-8 col-12">
+				<div class="col-lg-8 col-12" data-aos="fade-right">
 					<!-- Text -->
 					<p class="about-section__text">KuTech is an international brand specializing in parking systems and equipment, with over 10 years of experience and hundreds of successful projects worldwide. <br><br>
 					We prioritize comfort and reliability through thoughtful design, in-house software development, and 24/7 quality control to ensure seamless operation of your parking solutions.
@@ -191,7 +191,7 @@
 				</div>
 
 				<!-- Column:image -->
-				<div class="col-lg-4 col-12 about-section__img" style="background-image: url('img/about.png');"></div>
+				<div class="col-lg-4 col-12 about-section__img" style="background-image: url('img/about.png');" data-aos="fade-left"></div>
 			</div>
 		</div>
 	</section>
@@ -204,24 +204,24 @@
 			<h2 class="facilities__title section-title">Production facilities</h2>
 
 			<!-- Text -->
-			<p class="facilities__text mt-md-5 mt-4">We operate two specialized production facilities. At our first facility, we manufacture high-quality equipment enclosures. The second facility is dedicated to precision assembly of micro-mechanical components and comprehensive equipment testing.</p>
+			<p class="facilities__text mt-md-5 mt-4" data-aos="fade-right">We operate two specialized production facilities. At our first facility, we manufacture high-quality equipment enclosures. The second facility is dedicated to precision assembly of micro-mechanical components and comprehensive equipment testing.</p>
 
 			<!-- Row -->
 			<div class="d-flex flex-wrap justify-content-between w-100 mt-4">
 				<!-- Item -->
-				<div class="facilities-item" style="background-image: url('img/facility1.png');">
+				<div class="facilities-item" data-aos="flip-left" style="background-image: url('img/facility1.png');">
 					<!-- Title -->
 					<h4 class="facilities-item__title">Design</h4>
 				</div>
 
 				<!-- Item -->
-				<div class="facilities-item" style="background-image: url('img/facility2.jpg');">
+				<div class="facilities-item" data-aos="flip-left" style="background-image: url('img/facility2.jpg');">
 					<!-- Title -->
 					<h4 class="facilities-item__title">Manufacture</h4>
 				</div>
 
 				<!-- Item -->
-				<div class="facilities-item" style="background-image: url('img/facility3.jpg');">
+				<div class="facilities-item" data-aos="flip-left" style="background-image: url('img/facility3.jpg');">
 					<!-- Title -->
 					<h4 class="facilities-item__title">Turnkey software</h4>
 				</div>
@@ -241,7 +241,7 @@
 				<!-- Item -->
 				<div class="development-item">
 					<!-- Text -->
-					<p class="development-item__text">
+					<p class="development-item__text" data-aos="fade-right">
 						Our team consists of industry professionals, including a strong in-house software development team that ensures flexible system customization to meet client needs.
 						<br><br>
 						We develop both hardware and software in-house. All our equipment complies with international quality standards.
@@ -249,10 +249,10 @@
 				</div>
 
 				<!-- Item -->
-				<div class="development-item" style="background-image: url('img/development1.png');"></div>
+				<div class="development-item" data-aos="flip-right" style="background-image: url('img/development1.png');"></div>
 
 				<!-- Item -->
-				<div class="development-item d-flex justify-content-center align-items-center open-modal-btn" target-modal="#certificates-modal">
+				<div class="development-item d-flex justify-content-center align-items-center open-modal-btn" data-aos="flip-right" target-modal="#certificates-modal">
 					<!-- Image -->
 					<img src="img/development2.png" alt="" class="development-item__img">
 
@@ -272,7 +272,7 @@
 			<!-- Row -->
 			<div class="row align-items-center">
 				<!-- Column -->
-				<div class="col-lg-5 mb-md-5 mb-4">
+				<div class="col-lg-5 mb-md-5 mb-4" data-aos="fade-right">
 					<!-- Title -->
 					<h2 class="contact-section__title section-title">Have questions? <br> Contact Us</h2>
 
@@ -285,7 +285,7 @@
 				</div>
 
 				<!-- Column -->
-				<div class="col-lg-7">
+				<div class="col-lg-7" data-aos="fade-left">
 					<form action="#" class="contact-section-form form">
 						<!-- Field:name -->
 						<input type="text" class="form__field" name="name" placeholder="Name">
