--- a/KuTech/contact.html
+++ b/KuTech/contact.html
@@ -138,7 +138,7 @@
 			<!-- Row -->
 			<div class="row align-items-center">
 				<!-- Column -->
-				<div class="col-lg-5 mb-md-5 mb-4">
+				<div class="col-lg-5 mb-md-5 mb-4" data-aos="fade-right">
 					<!-- Title -->
 					<h2 class="contact-section__title section-title">Contact Form</h2>
 
@@ -149,7 +149,7 @@
 				</div>
 
 				<!-- Column -->
-				<div class="col-lg-7">
+				<div class="col-lg-7" data-aos="fade-left">
 					<form action="#" class="contact-section-form form">
 						<!-- Field:name -->
 						<input type="text" class="form__field" name="name" placeholder="Name">
