--- a/KuTech/equipment.html
+++ b/KuTech/equipment.html
@@ -34,16 +34,16 @@
 				<!-- PC: Menu -->
 				<ul class="header-pc-menu d-md-flex d-none">
 					<!-- Item -->
-					<li class="header-pc-menu__item"><a href="#">About Us</a></li>
+					<li class="header-pc-menu__item"><a href="about.html">About Us</a></li>
 
 					<!-- Item -->
-					<li class="header-pc-menu__item current-menu-item"><a href="#">Equipment</a></li>
+					<li class="header-pc-menu__item current-menu-item"><a href="equipment.html">Equipment</a></li>
 
 					<!-- Item -->
-					<li class="header-pc-menu__item"><a href="#">Solutions</a></li>
+					<li class="header-pc-menu__item"><a href="solutions.html">Solutions</a></li>
 
 					<!-- Item -->
-					<li class="header-pc-menu__item"><a href="#">Contact</a></li>
+					<li class="header-pc-menu__item"><a href="contact.html">Contact</a></li>
 				</ul>
 
 				<!-- PC: language -->
@@ -142,37 +142,37 @@
                 <!-- Row -->
                 <div class="key-features__inner d-flex flex-wrap w-100 mt-md-5 mt-3">
                     <!-- Item -->
-                    <div class="key-features-item col-lg-4 col-6">
+                    <div class="key-features-item col-lg-4 col-6" data-aos="fade-up">
                         <!-- Text -->
                         <span class="key-features-item__text">Accepting payment for single parking sessions</span>
                     </div>
 
                     <!-- Item -->
-                    <div class="key-features-item col-lg-4 col-6">
+                    <div class="key-features-item col-lg-4 col-6" data-aos="fade-up">
                         <!-- Text -->
                         <span class="key-features-item__text">Displaying the current card balance</span>
                     </div>
 
                     <!-- Item -->
-                    <div class="key-features-item col-lg-4 col-6">
+                    <div class="key-features-item col-lg-4 col-6" data-aos="fade-up">
                         <!-- Text -->
                         <span class="key-features-item__text">Topping up the card balance</span>
                     </div>
 
                     <!-- Item -->
-                    <div class="key-features-item col-lg-4 col-6">
+                    <div class="key-features-item col-lg-4 col-6" data-aos="fade-up">
                         <!-- Text -->
                         <span class="key-features-item__text">Purchasing parking subscriptions</span>
                     </div>
 
                     <!-- Item -->
-                    <div class="key-features-item col-lg-4 col-6">
+                    <div class="key-features-item col-lg-4 col-6" data-aos="fade-up">
                         <!-- Text -->
                         <span class="key-features-item__text">Updating cardholder data</span>
                     </div>
 
                     <!-- Item -->
-                    <div class="key-features-item col-lg-4 col-6">
+                    <div class="key-features-item col-lg-4 col-6" data-aos="fade-up">
                         <!-- Text -->
                         <span class="key-features-item__text">Printing Z-reports</span>
                     </div>
@@ -224,27 +224,27 @@
                 <!-- Options -->
                 <div class="description-options mt-md-5 mt-4">
                     <!-- Text -->
-                    <h3 class="description__title">We have developed a dedicated application for this <br> device, designed to perform the following tasks:</h3>
+                    <h3 class="description__title" data-aos="fade-right">We have developed a dedicated application for this <br> device, designed to perform the following tasks:</h3>
 
                     <!-- Row -->
                     <div class="d-flex flex-wrap justify-content-between w-100 mt-2">
                         <!-- Item -->
-                        <div class="description-options-item">
+                        <div class="description-options-item" data-aos="fade-up">
                             The <b>Kutech Handheld Mobile Cash</b>Register weighs just <b>460 g</b>, making it comfortable to hold and operate.
                         </div>
 
                         <!-- Item -->
-                        <div class="description-options-item">
+                        <div class="description-options-item" data-aos="fade-up">
                             It is ideal for <b>processing parking fee payments</b>, whether through a parking attendant or at the facility’s reception desk.
                         </div>
 
                         <!-- Item -->
-                        <div class="description-options-item">
+                        <div class="description-options-item" data-aos="fade-up">
                             Equipped with <b>Wi-Fi and a SIM card slot</b>, it can connect to the internet from anywhere.
                         </div>
 
                         <!-- Item -->
-                        <div class="description-options-item">
+                        <div class="description-options-item" data-aos="fade-up">
                             The <b>fiscal drive</b> is easy to install and can be purchased as part of the bundle.
                         </div>
                     </div>
@@ -256,9 +256,9 @@
                     <h3 class="description__title">Specifications</h3>
 
                     <!-- Row -->
-                    <div class="row">
+                    <div class="row align-items-start">
                         <!-- Column -->
-                        <div class="col-md-7">
+                        <div class="col-md-7" data-aos="fade-right">
                             <table>
                                 <tbody>
                                     <tr>
@@ -335,7 +335,7 @@
                         </div>
 
                         <!-- Column -->
-                        <div class="col-md-5 d-md-flex d-none justify-content-center">
+                        <div class="col-md-5 d-md-flex d-none justify-content-center description-content-sticky"  data-aos="flip-left">
                             <!-- Image -->
                             <div class="description-content__img" style="background-image: url('img/equipments/manual-cash/4.png');"></div>
                         </div>
@@ -354,55 +354,55 @@
                 <!-- Row -->
                 <div class="d-flex w-100 justify-content-between flex-wrap">
                     <!-- Item -->
-                    <div class="advantages-item">
+                    <div class="advantages-item" data-aos="flip-left">
                         <!-- Text -->
                         <p class="advantages-item__text">Built-in payment processing <br> for bank card payments</p>
                     </div>
 
                     <!-- Item -->
-                    <div class="advantages-item">
+                    <div class="advantages-item" data-aos="flip-left">
                         <!-- Text -->
                         <p class="advantages-item__text">Compact and lightweight design</p>
                     </div>
 
                     <!-- Item -->
-                    <div class="advantages-item">
+                    <div class="advantages-item" data-aos="flip-left">
                         <!-- Text -->
                         <p class="advantages-item__text">High mobility</p>
                     </div>
 
                     <!-- Item -->
-                    <div class="advantages-item">
+                    <div class="advantages-item" data-aos="flip-left">
                         <!-- Text -->
                         <p class="advantages-item__text">Powerful battery</p>
                     </div>
 
                     <!-- Item -->
-                    <div class="advantages-item">
+                    <div class="advantages-item" data-aos="flip-left">
                         <!-- Text -->
                         <p class="advantages-item__text">High-speed Japanese thermal printer (75 mm/s)</p>
                     </div>
 
                     <!-- Item -->
-                    <div class="advantages-item">
+                    <div class="advantages-item" data-aos="flip-left">
                         <!-- Text -->
                         <p class="advantages-item__text">Android OS with Kutech proprietary software</p>
                     </div>
 
                     <!-- Item -->
-                    <div class="advantages-item">
+                    <div class="advantages-item" data-aos="flip-left">
                         <!-- Text -->
                         <p class="advantages-item__text">Automatic updates for pre-installed cash register softwareht design</p>
                     </div>
 
                     <!-- Item -->
-                    <div class="advantages-item">
+                    <div class="advantages-item" data-aos="flip-left">
                         <!-- Text -->
                         <p class="advantages-item__text">Integrated QR code scanner</p>
                     </div>
 
                     <!-- Item -->
-                    <div class="advantages-item">
+                    <div class="advantages-item" data-aos="flip-left">
                         <!-- Text -->
                         <p class="advantages-item__text">Full suite of wireless connectivity (3G/4G, Wi-Fi, Bluetooth)</p>
                     </div>
@@ -417,7 +417,7 @@
                 <!-- Row -->
                 <div class="row align-items-center">
                     <!-- Column -->
-                    <div class="col-lg-5 mb-md-5 mb-4">
+                    <div class="col-lg-5 mb-md-5 mb-4" data-aos="fade-right">
                         <!-- Title -->
                         <h2 class="contact-section__title section-title">Have questions? <br> Contact Us</h2>
 
@@ -430,7 +430,7 @@
                     </div>
 
                     <!-- Column -->
-                    <div class="col-lg-7">
+                    <div class="col-lg-7" data-aos="fade-left">
                         <form action="#" class="contact-section-form form">
                             <!-- Field:name -->
                             <input type="text" class="form__field" name="name" placeholder="Name">
