--- a/KuTech/index.html
+++ b/KuTech/index.html
@@ -34,16 +34,16 @@
 				<!-- PC: Menu -->
 				<ul class="header-pc-menu d-md-flex d-none">
 					<!-- Item -->
-					<li class="header-pc-menu__item"><a href="#">About Us</a></li>
+					<li class="header-pc-menu__item"><a href="about.html">About Us</a></li>
 
 					<!-- Item -->
-					<li class="header-pc-menu__item"><a href="#">Equipment</a></li>
+					<li class="header-pc-menu__item"><a href="equipment.html">Equipment</a></li>
 
 					<!-- Item -->
-					<li class="header-pc-menu__item"><a href="#">Solutions</a></li>
+					<li class="header-pc-menu__item"><a href="solutions.html">Solutions</a></li>
 
 					<!-- Item -->
-					<li class="header-pc-menu__item"><a href="#">Contact</a></li>
+					<li class="header-pc-menu__item"><a href="contact.html">Contact</a></li>
 				</ul>
 
 				<!-- PC: language -->
@@ -130,7 +130,7 @@
 	<section class="intro section">
 		<div class="container d-flex flex-column">
 			<!-- Section title -->
-			<h2 class="section-title text-center mt-5">Welcome to Kutech – where smart parking meets seamless solutions!</h2>
+			<h2 class="section-title text-center mt-5" data-aos="fade-down">Welcome to Kutech – where smart parking meets seamless solutions!</h2>
 
 			<!-- Text -->
 			<p class="intro__text d-md-none">
@@ -143,7 +143,7 @@
 			<div class="intro-row d-flex flex-wrap mt-md-5 mt-4 pb-md-5">
 				<!-- Column -->
 				<div class="intro-column">
-					<p class="intro__text">
+					<p class="intro__text" data-aos="fade-right">
 						At Kutech, we design and manufacture innovative parking systems that make life easier for drivers and businesses alike. Our team of experts combines cutting-edge technology with user-friendly design to create reliable, efficient, and hassle-free parking solutions. <br>
 						With a global manufacturing network, we ensure top-quality equipment that’s built to last and installed worldwide. Whether you're a business owner, developer, or city planner, we’re here to provide you with the perfect parking solution—tailored just for you.
 						Let’s make parking simpler, together!
@@ -202,46 +202,46 @@
 			<!-- Row -->
 			<div class="d-flex flex-wrap justify-content-between align-items-center w-100 mt-md-5 mt-3">
 				<!-- Text -->
-				<p class="section-text solutions__text">A complete parking management solution for your business – including equipment, installation, maintenance, and technical support for seamless operations</p>
+				<p class="section-text solutions__text" data-aos="fade-right">A complete parking management solution for your business – including equipment, installation, maintenance, and technical support for seamless operations</p>
 
 				<!-- Btn -->
-				<a href="#" class="btn solutions__btn filled d-lg-flex d-none">Explore solutions</a>
+				<a href="#" class="btn solutions__btn filled d-lg-flex d-none" data-aos="fade-left">Explore solutions</a>
 			</div>
 
 			<!-- Row -->
 			<div class="solutions-row d-flex flex-wrap no-gutter mt-md-5 mt-4">
 				<!-- Item -->
-				<div class="col-lg-4 col-6 solutions-item" style="background-image: url('img/solution1.jpg');">
+				<div class="col-lg-4 col-6 solutions-item" style="background-image: url('img/solution1.jpg');" data-aos="flip-left">
 					<!-- Title -->
 					<h3 class="solutions-item__title">Airport</h3>
 				</div>
 
 				<!-- Item -->
-				<div class="col-lg-4 col-6 solutions-item" style="background-image: url('img/solution2.jpg');">
+				<div class="col-lg-4 col-6 solutions-item" style="background-image: url('img/solution2.jpg');" data-aos="flip-left">
 					<!-- Title -->
 					<h3 class="solutions-item__title">Hotel</h3>
 				</div>
 
 				<!-- Item -->
-				<div class="col-lg-4 col-6 solutions-item" style="background-image: url('img/solution3.jpg');">
+				<div class="col-lg-4 col-6 solutions-item" style="background-image: url('img/solution3.jpg');" data-aos="flip-left">
 					<!-- Title -->
 					<h3 class="solutions-item__title">Office buildings</h3>
 				</div>
 
 				<!-- Item -->
-				<div class="col-lg-4 col-6 solutions-item" style="background-image: url('img/solution4.jpg');">
+				<div class="col-lg-4 col-6 solutions-item" style="background-image: url('img/solution4.jpg');" data-aos="flip-left">
 					<!-- Title -->
 					<h3 class="solutions-item__title">Logistics centers</h3>
 				</div>
 
 				<!-- Item -->
-				<div class="col-lg-4 col-6 solutions-item" style="background-image: url('img/solution5.jpg');">
+				<div class="col-lg-4 col-6 solutions-item" style="background-image: url('img/solution5.jpg');" data-aos="flip-left">
 					<!-- Title -->
 					<h3 class="solutions-item__title">Warehouses</h3>
 				</div>
 
 				<!-- Item -->
-				<div class="col-lg-4 col-6 solutions-item" style="background-image: url('img/solution6.jpg');">
+				<div class="col-lg-4 col-6 solutions-item" style="background-image: url('img/solution6.jpg');" data-aos="flip-left">
 					<!-- Title -->
 					<h3 class="solutions-item__title">Event parking</h3>
 				</div>
@@ -342,7 +342,7 @@
 			<!-- Row -->
 			<div class="row align-items-center">
 				<!-- Column -->
-				<div class="col-lg-5 mb-md-5 mb-4">
+				<div class="col-lg-5 mb-md-5 mb-4" data-aos="fade-right">
 					<!-- Title -->
 					<h2 class="contact-section__title section-title">Have questions? <br> Contact Us</h2>
 
@@ -355,7 +355,7 @@
 				</div>
 
 				<!-- Column -->
-				<div class="col-lg-7">
+				<div class="col-lg-7" data-aos="fade-left">
 					<form action="#" class="contact-section-form form">
 						<!-- Field:name -->
 						<input type="text" class="form__field" name="name" placeholder="Name">
