--- a/KuTech/catalog.html
+++ b/KuTech/catalog.html
@@ -34,16 +34,16 @@
 				<!-- PC: Menu -->
 				<ul class="header-pc-menu d-md-flex d-none">
 					<!-- Item -->
-					<li class="header-pc-menu__item"><a href="#">About Us</a></li>
+					<li class="header-pc-menu__item"><a href="about.html">About Us</a></li>
 
 					<!-- Item -->
-					<li class="header-pc-menu__item"><a href="#">Equipment</a></li>
+					<li class="header-pc-menu__item"><a href="equipment.html">Equipment</a></li>
 
 					<!-- Item -->
-					<li class="header-pc-menu__item"><a href="#">Solutions</a></li>
+					<li class="header-pc-menu__item"><a href="solutions.html">Solutions</a></li>
 
 					<!-- Item -->
-					<li class="header-pc-menu__item"><a href="#">Contact</a></li>
+					<li class="header-pc-menu__item"><a href="contact.html">Contact</a></li>
 				</ul>
 
 				<!-- PC: language -->
