--- a/KuTech/solutions.html
+++ b/KuTech/solutions.html
@@ -34,16 +34,16 @@
 				<!-- PC: Menu -->
 				<ul class="header-pc-menu d-md-flex d-none">
 					<!-- Item -->
-					<li class="header-pc-menu__item"><a href="#">About Us</a></li>
+					<li class="header-pc-menu__item"><a href="about.html">About Us</a></li>
 
 					<!-- Item -->
-					<li class="header-pc-menu__item"><a href="#">Equipment</a></li>
+					<li class="header-pc-menu__item"><a href="equipment.html">Equipment</a></li>
 
 					<!-- Item -->
-					<li class="header-pc-menu__item current-menu-item"><a href="#">Solutions</a></li>
+					<li class="header-pc-menu__item current-menu-item"><a href="solutions.html">Solutions</a></li>
 
 					<!-- Item -->
-					<li class="header-pc-menu__item"><a href="#">Contact</a></li>
+					<li class="header-pc-menu__item"><a href="contact.html">Contact</a></li>
 				</ul>
 
 				<!-- PC: language -->
@@ -160,7 +160,7 @@
                 </div>
 
                 <!-- Tabs content -->
-                <div class="w-100 mt-4">
+                <div class="w-100 mt-4" data-aos="fade-up">
                     <!-- Tab content -->
                     <div class="solutions-tabs-content tab-content active" id="solutions-tab1" style="background-image: url('img/solutions/tab1.png');"></div>
 
@@ -187,12 +187,12 @@
             <!-- Container -->
             <div class="container">
                 <!-- Title -->
-                <h3 class="solutions__title">Smart parking pain points</h3>
+                <h3 class="solutions__title" data-aos="fade-right">Smart parking pain points</h3>
 
                 <!-- Row -->
                 <div class="d-flex flex-wrap justify-content-between mt-md-5 mt-3">
                     <!-- Item -->
-                    <div class="solutions-points-item">
+                    <div class="solutions-points-item" data-aos="fade-up">
                         <!-- Square -->
                         <div class="solutions-points-item__square"></div>
 
@@ -201,7 +201,7 @@
                     </div>
 
                     <!-- Item -->
-                    <div class="solutions-points-item">
+                    <div class="solutions-points-item" data-aos="fade-up">
                         <!-- Square -->
                         <div class="solutions-points-item__square"></div>
 
@@ -210,7 +210,7 @@
                     </div>
 
                     <!-- Item -->
-                    <div class="solutions-points-item">
+                    <div class="solutions-points-item" data-aos="fade-up">
                         <!-- Square -->
                         <div class="solutions-points-item__square"></div>
 
@@ -219,7 +219,7 @@
                     </div>
 
                     <!-- Item -->
-                    <div class="solutions-points-item">
+                    <div class="solutions-points-item" data-aos="fade-up">
                         <!-- Square -->
                         <div class="solutions-points-item__square"></div>
 
@@ -240,7 +240,7 @@
                 <!-- Row -->
                 <div class="key-features__inner d-flex flex-wrap w-100 mt-md-5 mt-3">
                     <!-- Item -->
-                    <div class="key-features-item has-tooltip col-lg-4 col-6">
+                    <div class="key-features-item has-tooltip col-lg-4 col-6" data-aos="flip-left">
                         <!-- Text -->
                         <span class="tooltip-btn key-features-item__text">
                             Central management <br> console
@@ -255,7 +255,7 @@
                     </div>
 
 					<!-- Item -->
-                    <div class="key-features-item has-tooltip col-lg-4 col-6">
+                    <div class="key-features-item has-tooltip col-lg-4 col-6" data-aos="flip-left">
                         <!-- Text -->
                         <span class="tooltip-btn key-features-item__text">
                         	Lessee account <br> interface
@@ -274,7 +274,7 @@
                     </div>
 
 					<!-- Item -->
-                    <div class="key-features-item has-tooltip col-lg-4 col-6">
+                    <div class="key-features-item has-tooltip col-lg-4 col-6" data-aos="flip-left">
                         <!-- Text -->
                         <span class="tooltip-btn key-features-item__text">
                         	Section-based parking allocation
@@ -293,7 +293,7 @@
                     </div>
 
 					<!-- Item -->
-                    <div class="key-features-item has-tooltip col-lg-4 col-6">
+                    <div class="key-features-item has-tooltip col-lg-4 col-6" data-aos="flip-left">
                         <!-- Text -->
                         <span class="tooltip-btn key-features-item__text">
                             Automated fare <br> calculation
@@ -308,7 +308,7 @@
                     </div>
 
 					<!-- Item -->
-                    <div class="key-features-item has-tooltip col-lg-4 col-6">
+                    <div class="key-features-item has-tooltip col-lg-4 col-6" data-aos="flip-left">
                         <!-- Text -->
                         <span class="tooltip-btn key-features-item__text">
                         	Optimized vehicle <br> throughput
@@ -327,7 +327,7 @@
                     </div>
 
 					<!-- Item -->
-                    <div class="key-features-item has-tooltip col-lg-4 col-6">
+                    <div class="key-features-item has-tooltip col-lg-4 col-6" data-aos="flip-left">
                         <!-- Text -->
                         <span class="tooltip-btn key-features-item__text">
                         	Wayfinding <br> technology
@@ -346,7 +346,7 @@
                     </div>
 
 					<!-- Item -->
-                    <div class="key-features-item has-tooltip col-lg-4 col-6">
+                    <div class="key-features-item has-tooltip col-lg-4 col-6" data-aos="flip-left">
                         <!-- Text -->
                         <span class="tooltip-btn key-features-item__text">
                            	Operational data <br> reporting
@@ -361,7 +361,7 @@
                     </div>
 
 					<!-- Item -->
-                    <div class="key-features-item has-tooltip col-lg-4 col-6">
+                    <div class="key-features-item has-tooltip col-lg-4 col-6" data-aos="flip-left">
                         <!-- Text -->
                         <span class="tooltip-btn key-features-item__text">
                         	Unauthorized vehicle database
@@ -380,7 +380,7 @@
                     </div>
 
 					<!-- Item -->
-                    <div class="key-features-item has-tooltip col-lg-4 col-6">
+                    <div class="key-features-item has-tooltip col-lg-4 col-6" data-aos="flip-left">
                         <!-- Text -->
                         <span class="tooltip-btn key-features-item__text">
                         	Voice assistance <br> system
@@ -409,7 +409,7 @@
 				<h2 class="section-title">Customizable Solutions</h2>
 
 				<!-- Text -->
-				<p class="solutions-custom__text mt-3">Kutech parking systems offer comprehensive, flexible functionality. <br> We'll customize the perfect solution for your facility's unique requirements.</p>
+				<p class="solutions-custom__text mt-3" data-aos="fade-right">Kutech parking systems offer comprehensive, flexible functionality. <br> We'll customize the perfect solution for your facility's unique requirements.</p>
 
 				<!-- Slider -->
 				<div class="solutions-custom-slider swiper">
@@ -1236,7 +1236,7 @@
 			<!-- Row -->
 			<div class="row align-items-center">
 				<!-- Column -->
-				<div class="col-lg-5 mb-md-5 mb-4">
+				<div class="col-lg-5 mb-md-5 mb-4" data-aos="fade-right">
 					<!-- Title -->
 					<h2 class="contact-section__title section-title">Have questions? <br> Contact Us</h2>
 
@@ -1249,7 +1249,7 @@
 				</div>
 
 				<!-- Column -->
-				<div class="col-lg-7">
+				<div class="col-lg-7" data-aos="fade-left">
 					<form action="#" class="contact-section-form form">
 						<!-- Field:name -->
 						<input type="text" class="form__field" name="name" placeholder="Name">
