--- a/KuTech/catalog.html
+++ b/KuTech/catalog.html
@@ -3483,14 +3483,14 @@
 
 			<!-- Menu -->
 			<ul class="mobile-nav-menu">
-				<li class="mobile-nav-menu__item"><a href="#">About Us</a></li>
-				<li class="mobile-nav-menu__item"><a href="#">Equipment</a></li>
-				<li class="mobile-nav-menu__item"><a href="#">System</a></li>
-				<li class="mobile-nav-menu__item"><a href="#">Contact</a></li>
+				<li class="mobile-nav-menu__item"><a href="about.html">About Us</a></li>
+				<li class="mobile-nav-menu__item"><a href="equipment.html">Equipment</a></li>
+				<li class="mobile-nav-menu__item"><a href="solutions.html">Solutions</a></li>
+				<li class="mobile-nav-menu__item"><a href="contact.html">Contact</a></li>
 			</ul>
 
 			<!-- Bottom & Social links -->
-			<div class="mobile-nav-bottom d-flex">
+			<div class="mobile-nav-bottom d-flex mb-2">
 				<!-- Link -->
 				<a href="#" class="social-link"><i class="fa-brands fa-telegram"></i></a>
 
