--- a/KuTech/solutions.html
+++ b/KuTech/solutions.html
@@ -240,7 +240,7 @@
                 <!-- Row -->
                 <div class="key-features__inner d-flex flex-wrap w-100 mt-md-5 mt-3">
                     <!-- Item -->
-                    <div class="key-features-item has-tooltip col-lg-4 col-6" data-aos="flip-left">
+                    <div class="key-features-item has-tooltip col-lg-4 col-6">
                         <!-- Text -->
                         <span class="tooltip-btn key-features-item__text">
                             Central management <br> console
@@ -255,7 +255,7 @@
                     </div>
 
 					<!-- Item -->
-                    <div class="key-features-item has-tooltip col-lg-4 col-6" data-aos="flip-left">
+                    <div class="key-features-item has-tooltip col-lg-4 col-6">
                         <!-- Text -->
                         <span class="tooltip-btn key-features-item__text">
                         	Lessee account <br> interface
@@ -274,7 +274,7 @@
                     </div>
 
 					<!-- Item -->
-                    <div class="key-features-item has-tooltip col-lg-4 col-6" data-aos="flip-left">
+                    <div class="key-features-item has-tooltip col-lg-4 col-6">
                         <!-- Text -->
                         <span class="tooltip-btn key-features-item__text">
                         	Section-based parking allocation
@@ -293,7 +293,7 @@
                     </div>
 
 					<!-- Item -->
-                    <div class="key-features-item has-tooltip col-lg-4 col-6" data-aos="flip-left">
+                    <div class="key-features-item has-tooltip col-lg-4 col-6">
                         <!-- Text -->
                         <span class="tooltip-btn key-features-item__text">
                             Automated fare <br> calculation
@@ -308,7 +308,7 @@
                     </div>
 
 					<!-- Item -->
-                    <div class="key-features-item has-tooltip col-lg-4 col-6" data-aos="flip-left">
+                    <div class="key-features-item has-tooltip col-lg-4 col-6">
                         <!-- Text -->
                         <span class="tooltip-btn key-features-item__text">
                         	Optimized vehicle <br> throughput
@@ -327,7 +327,7 @@
                     </div>
 
 					<!-- Item -->
-                    <div class="key-features-item has-tooltip col-lg-4 col-6" data-aos="flip-left">
+                    <div class="key-features-item has-tooltip col-lg-4 col-6">
                         <!-- Text -->
                         <span class="tooltip-btn key-features-item__text">
                         	Wayfinding <br> technology
@@ -346,7 +346,7 @@
                     </div>
 
 					<!-- Item -->
-                    <div class="key-features-item has-tooltip col-lg-4 col-6" data-aos="flip-left">
+                    <div class="key-features-item has-tooltip col-lg-4 col-6">
                         <!-- Text -->
                         <span class="tooltip-btn key-features-item__text">
                            	Operational data <br> reporting
@@ -361,7 +361,7 @@
                     </div>
 
 					<!-- Item -->
-                    <div class="key-features-item has-tooltip col-lg-4 col-6" data-aos="flip-left">
+                    <div class="key-features-item has-tooltip col-lg-4 col-6">
                         <!-- Text -->
                         <span class="tooltip-btn key-features-item__text">
                         	Unauthorized vehicle database
@@ -380,7 +380,7 @@
                     </div>
 
 					<!-- Item -->
-                    <div class="key-features-item has-tooltip col-lg-4 col-6" data-aos="flip-left">
+                    <div class="key-features-item has-tooltip col-lg-4 col-6">
                         <!-- Text -->
                         <span class="tooltip-btn key-features-item__text">
                         	Voice assistance <br> system
