--- a/Luxury/index.html
+++ b/Luxury/index.html
@@ -37,6 +37,7 @@
 				<li><a href="#">отзывы</a></li>
 				<li><a href="#">вопрос -ответ</a></li>
 				<li><a href="#">об украшениях</a></li>
+				<li><a href="#">статьи</a></li>
 			</menu>
 
 			<!-- Burger button -->
@@ -72,13 +73,15 @@
 			<!--! Section A -->
 			<section class="section-a section">
 				<!-- Row -->
-				<div class="d-flex justify-content-between section-inner">
-					<!-- Breadcrumb -->
-					<span class="section-breadcrumb">/о нас</span>
+				<div class="d-md-flex justify-content-between section-inner">
+					<div class="col-md-5">
+						<!-- Breadcrumb -->
+						<span class="section-breadcrumb">/о нас</span>
+					</div>
 
 					<!-- Section title -->
-					<h2 class="section-title section-a__title mt-md-0 mt-1">
-						<span class="text-center">PIERCING BOUTIQUE - это</span>
+					<h2 class="section-title section-a__title col-md-7 mt-md-0 mt-1">
+						<span>PIERCING BOUTIQUE - это</span>
 						современный, безопасный и профессиональный пирсинг в самом центре Москвы и Московской области.
 					</h2>
 				</div>
@@ -136,7 +139,7 @@
 					</div>
 
 					<!-- Row -->
-					<div class="d-md-flex justify-content-between align-items-center mt-md-5 mt-4">
+					<div class="d-md-flex justify-content-between align-items-end mt-md-5 mt-4">
 						<!-- Column -->
 						<div class="col-md-5 col-12">
 							<!-- Text -->
@@ -155,13 +158,13 @@
 			<!--! Section B -->
 			<section class="section-b section">
 				<!-- Row -->
-				<div class="d-flex justify-content-between section-inner">
+				<div class="d-md-flex justify-content-between section-inner">
 					<!-- Breadcrumb -->
-					<span class="section-breadcrumb">/принципы работы</span>
+					<span class="section-breadcrumb col-md-5">/принципы работы</span>
 
 					<!-- Section title -->
-					<h2 class="section-title section-b__title light mt-md-0 mt-1">
-						<span class="text-right">Наши принципы или что такое</span>
+					<h2 class="section-title section-b__title light col-md-7 mt-md-0 mt-1">
+						<span>Наши принципы или что такое</span>
 						профессиональный пирсинг?
 					</h2>
 				</div>
@@ -423,11 +426,11 @@
 					<!-- Row -->
 					<div class="w-100 d-md-flex justify-content-between w-100">
 						<!-- Breadcrumb -->
-						<span class="section-breadcrumb">/акция</span>
+						<span class="section-breadcrumb col-md-5">/акция</span>
 
 						<!-- Section title -->
-						<h2 class="section-title section-c__title dark mt-md-0 mt-1">
-							<span class="text-right">Депозит на 1000₽ в студию</span>
+						<h2 class="section-title section-c__title dark col-md-7 mt-md-0 mt-1">
+							<span>Депозит на 1000₽ в студию</span>
 							профессионального пирсинга
 						</h2>
 
@@ -626,13 +629,13 @@
 				<!-- Inner -->
 				<div class="section-inner">
 					<!-- Row -->
-					<div class="d-flex justify-content-between w-100">
+					<div class="d-md-flex justify-content-between w-100">
 						<!-- Breadcrumb -->
-						<span class="section-breadcrumb d-md-block d-none">/команда</span>
+						<span class="section-breadcrumb col-md-5">/команда</span>
 
 						<!-- Section title -->
-						<h2 class="section-title section-e__title dark mt-md-0 mt-1">
-							<span class="text-right">Наша команда, которая будет</span>
+						<h2 class="section-title section-e__title dark col-md-7 mt-md-0 mt-1">
+							<span>Наша команда, которая будет</span>
 							украшать ваше тело и душу
 						</h2>
 					</div>
@@ -641,9 +644,6 @@
 					<div class="section-e-slider swiper mt-md-5 mt-4">
 						<!-- Wrapper -->
 						<div class="section-e-slider-wrapper swiper-wrapper">
-							<!-- Item -->
-							<div class="section-e-slider-item light swiper-slide"></div>
-
 							<!-- Item -->
 							<div class="section-e-slider-item swiper-slide" style="background-image: url('img/section-e/1.jpg');">
 								<!-- Text -->
@@ -700,15 +700,15 @@
 						</div>
 					</div>
 
-					<!-- Services -->
+					<!--* Services -->
 					<!-- Row -->
 					<div class="d-flex justify-content-between w-100 mt-5 pt-5">
 						<!-- Breadcrumb -->
-						<span class="section-breadcrumb d-md-block d-none">/услуги</span>
+						<span class="section-breadcrumb col-md-5">/услуги</span>
 
 						<!-- Section title -->
-						<h2 class="section-title section-e__title dark mt-md-0 mt-1">
-							<span class="text-right">Мы открыты выполнить любой</span>
+						<h2 class="section-title section-e__title dark col-md-7 mt-md-0 mt-1">
+							<span>Мы открыты выполнить любой</span>
 							проект для реализации ваших идей
 						</h2>
 					</div>
@@ -802,7 +802,7 @@
 									</table>
 
 									<!-- Button -->
-									<a href="#" class="section-e-faq__btn btn dark">записаться на пирсинг</a>
+									<a href="#" class="section-e-faq__btn faq__btn btn dark">записаться на пирсинг</a>
 								</div>
 							</div>
 						</div>
@@ -962,7 +962,7 @@
 									</table>
 
 									<!-- Button -->
-									<a href="#" class="section-e-faq__btn btn dark">записаться на пирсинг</a>
+									<a href="#" class="section-e-faq__btn faq__btn btn dark">записаться на пирсинг</a>
 								</div>
 							</div>
 						</div>
@@ -1060,7 +1060,7 @@
 									</table>
 
 									<!-- Button -->
-									<a href="#" class="section-e-faq__btn btn dark">записаться на пирсинг</a>
+									<a href="#" class="section-e-faq__btn faq__btn btn dark">записаться на пирсинг</a>
 								</div>
 							</div>
 						</div>
@@ -1073,13 +1073,13 @@
 				<!-- Inner -->
 				<div class="section-inner">
 					<!-- Row -->
-					<div class="d-flex justify-content-between w-100">
+					<div class="d-md-flex justify-content-between w-100">
 						<!-- Breadcrumb -->
-						<span class="section-breadcrumb d-md-block d-none">/работы</span>
+						<span class="section-breadcrumb col-md-5">/работы</span>
 
 						<!-- Section title -->
-						<h2 class="section-title section-f__title light mt-md-0 mt-1">
-							<span class="text-right">Наши работы на вашем теле</span>
+						<h2 class="section-title section-f__title light col-md-6 mt-md-0 mt-1">
+							Наши работы на вашем теле
 						</h2>
 					</div>
 
@@ -1148,13 +1148,13 @@
 				<!-- Inner -->
 				<div class="section-inner">
 					<!-- Row -->
-					<div class="w-100 d-md-flex justify-content-between w-100">
+					<div class="d-md-flex justify-content-between w-100">
 						<!-- Breadcrumb -->
-						<span class="section-g__breadcrumb section-breadcrumb">/отзывы</span>
+						<span class="section-g__breadcrumb section-breadcrumb col-md-5">/отзывы</span>
 
 						<!-- Section title -->
-						<h2 class="section-title section-g__title light mt-md-0 mt-1">
-							<span class="text-right">От идеи до реализации.</span>
+						<h2 class="section-title section-g__title light col-md-7 mt-md-0 mt-1">
+							<span>От идеи до реализации.</span>
 							Что говорят наши клиенты
 						</h2>
 					</div>
@@ -1356,13 +1356,13 @@
 				<!-- Inner -->
 				<div class="section-inner">
 					<!-- Row -->
-					<div class="w-100 d-md-flex justify-content-between w-100">
+					<div class="d-md-flex justify-content-between w-100">
 						<!-- Breadcrumb -->
-						<span class="section-breadcrumb">/об украшениях</span>
+						<span class="section-breadcrumb col-md-5">/об украшениях</span>
 
 						<!-- Section title -->
-						<h2 class="section-title section-h__title light mt-md-0 mt-1">
-							<span class="text-right">Мы доверяем только</span>
+						<h2 class="section-title section-h__title light col-md-7 mt-md-0 mt-1">
+							<span>Мы доверяем только</span>
 							профессиональным брендам с мировым именем, безопасность и качество которых проверены экспертами индустрии пирсинга всего мира и подтверждены пожизненной гарантией качества производителей
 						</h2>
 					</div>
@@ -1731,14 +1731,14 @@
 				<!-- Inner -->
 				<div class="section-inner">
 					<!-- Row -->
-					<div class="w-100 d-md-flex justify-content-between w-100">
+					<div class="d-md-flex justify-content-between w-100">
 						<!-- Breadcrumb -->
-						<span class="section-breadcrumb">/блог</span>
+						<span class="section-breadcrumb col-md-3">/блог</span>
 
 						<!-- Section title -->
-						<h2 class="section-title section-j__title mt-md-0 mt-1">
-							<span class="text-right me-md-5">Статьи, которые помогут тебе</span>
-							<span class="text-right">погрузиться в мир профессионального пирсинга</span>
+						<h2 class="section-title section-j__title col-md-9 mt-md-0 mt-1">
+							<span class="text-right ms-0">Статьи, которые помогут тебе</span>
+							погрузиться в мир профессионального пирсинга
 						</h2>
 					</div>
 
@@ -1824,7 +1824,38 @@
 								<!-- Row -->
 								<div class="faq-item-question">
 									<!-- Title -->
-									<h3 class="faq-item__title">Как подготовиться к <br> процедуре?</h3>
+									<h3 class="faq-item__title">Есть ли какие-то противопоказания к процедуре пирсинга?</h3>
+
+									<!-- Icon -->
+									<i class="fa-thin fa-arrow-down-right"></i>
+								</div>
+
+								<!-- Answer -->
+								<div class="faq-item-answer">
+									<ul>
+										<li>
+											<b>Беременность и период лактации</b><br>
+											В этот период организм женщины работает за двоих. Ему чужды любые инородные предметы и манипуляции. Ресурсы организма направлены на его поддержание, а также – на рост и развитие плода. В случае возникновения проблем с пирсингом, стандартные терапевтические схемы и прием большинства препаратов недопустимы, а вот осложнения легко усугубляются ввиду положения женщины.
+										</li>
+										<li>Все фазы инфекционных заболеваний</li>
+										<li>
+											<b>Гепатиты В и С</b><br>
+											В этот период иммунитет человека очень сильно ослаблен. Он не способен защитить себя, не говоря о свежем пирсинге. По итогу: можно получить осложнения как при основном диагнозе, так и с проколом. Ведь на заживление пирсинга, прежде всего, влияет состояние иммунитета. Если иммунной системе есть, чем заниматься – не забирайте у нее ресурсы.
+										</li>
+										<li>
+											<b>Болезни свертываемости крови</b><br>
+											Низкая свертываемость крови не только чревата обильным кровотечением после прокола, но и будет препятствовать заживлению раны и формированию канала в принципе.
+										</li>
+									</ul>
+								</div>
+							</div>
+
+							<!-- Item -->
+							<div class="faq-item">
+								<!-- Row -->
+								<div class="faq-item-question">
+									<!-- Title -->
+									<h3 class="faq-item__title">Как подготовиться к процедуре?</h3>
 
 									<!-- Icon -->
 									<i class="fa-thin fa-arrow-down-right"></i>
@@ -1853,37 +1884,6 @@
 											Женщинам рекомендуется планировать процедуру пирсинга на середину менструального цикла. Самый удачный момент – на вторую-третью неделю. Как правило, в это время чувствительность организма снижена, гормональный фон спокоен и нет перепадов настроения.Не забывайте о своем настроении!
 											<b>Прокол — это стресс для организма, поэтому день должен быть спокойным, празднично-выходным. Хороший настрой поможет сделать процедуру более комфортной, а заживление пройдет без лишнего стресса.</b>
 											Это были общие рекомендации для подготовки к процедуре пирсинга. Помните, что все мы индивидуальны, а значит всегда можно найти подход именно к Вашему случаю.
-										</li>
-									</ul>
-								</div>
-							</div>
-
-							<!-- Item -->
-							<div class="faq-item">
-								<!-- Row -->
-								<div class="faq-item-question">
-									<!-- Title -->
-									<h3 class="faq-item__title">Есть ли какие-то противопоказания к процедуре пирсинга?</h3>
-
-									<!-- Icon -->
-									<i class="fa-thin fa-arrow-down-right"></i>
-								</div>
-
-								<!-- Answer -->
-								<div class="faq-item-answer">
-									<ul>
-										<li>
-											<b>Беременность и период лактации</b><br>
-											В этот период организм женщины работает за двоих. Ему чужды любые инородные предметы и манипуляции. Ресурсы организма направлены на его поддержание, а также – на рост и развитие плода. В случае возникновения проблем с пирсингом, стандартные терапевтические схемы и прием большинства препаратов недопустимы, а вот осложнения легко усугубляются ввиду положения женщины.
-										</li>
-										<li>Все фазы инфекционных заболеваний</li>
-										<li>
-											<b>Гепатиты В и С</b><br>
-											В этот период иммунитет человека очень сильно ослаблен. Он не способен защитить себя, не говоря о свежем пирсинге. По итогу: можно получить осложнения как при основном диагнозе, так и с проколом. Ведь на заживление пирсинга, прежде всего, влияет состояние иммунитета. Если иммунной системе есть, чем заниматься – не забирайте у нее ресурсы.
-										</li>
-										<li>
-											<b>Болезни свертываемости крови</b><br>
-											Низкая свертываемость крови не только чревата обильным кровотечением после прокола, но и будет препятствовать заживлению раны и формированию канала в принципе.
 										</li>
 									</ul>
 								</div>
@@ -2013,7 +2013,7 @@
 								<!-- Row -->
 								<div class="faq-item-question">
 									<!-- Title -->
-									<h3 class="faq-item__title">Чем обрабатывать пирсинг? <br><br></h3>
+									<h3 class="faq-item__title">Чем обрабатывать пирсинг?</h3>
 
 									<!-- Icon -->
 									<i class="fa-thin fa-arrow-down-right"></i>
@@ -2109,7 +2109,7 @@
 								<!-- Row -->
 								<div class="faq-item-question">
 									<!-- Title -->
-									<h3 class="faq-item__title">Где вы находитесь? <br><br></h3>
+									<h3 class="faq-item__title">Где вы находитесь?</h3>
 
 									<!-- Icon -->
 									<i class="fa-thin fa-arrow-down-right"></i>
@@ -2218,7 +2218,7 @@
 								<!-- Row -->
 								<div class="faq-item-question">
 									<!-- Title -->
-									<h3 class="faq-item__title">Как я могу записаться <br> в студию на процедуру?</h3>
+									<h3 class="faq-item__title">Как я могу записаться в студию на процедуру?</h3>
 
 									<!-- Icon -->
 									<i class="fa-thin fa-arrow-down-right"></i>
