--- a/ParkPass/search-load.html
+++ b/ParkPass/search-load.html
@@ -59,5 +59,12 @@
             <p class="message-text">ищем информацию по вашей <br> парковочной сессии</p>
         </main>
     </div>
+
+    <!--! Scripts -->
+    <!-- Autocomplete -->
+    <script src="js/autoComplete.min.js"></script>
+
+    <!-- Search -->
+    <script src="js/search.js"></script>
 </body>
 </html>
