--- a/ParkPass/session.html
+++ b/ParkPass/session.html
@@ -150,7 +150,7 @@
             </p>
 
             <!-- Close button -->
-            <button class="modal-close-btn btn gold">
+            <button class="modal-close-btn">
                 <img src="img/close-mark.png">
             </button>
         </div>
