--- a/ParkPass/index.html
+++ b/ParkPass/index.html
@@ -60,6 +60,15 @@
                 <div class="search-box-bottom"></div>
             </div>
         </main>
+
+        <!-- Фикс прыжков на ios -->
+        <style>
+            /* Предотвращаем прыжки */
+            html, body {
+                height: 100%;
+                overflow: hidden;
+            }
+        </style>
     </div>
 
     <!--! Scripts -->
