--- a/ParkPass/session-no-photo.html
+++ b/ParkPass/session-no-photo.html
@@ -143,7 +143,7 @@
             </p>
 
             <!-- Close button -->
-            <button class="modal-close-btn btn gold">
+            <button class="modal-close-btn">
                 <img src="img/close-mark.png">
             </button>
         </div>
