--- a/ParkPass/session.html
+++ b/ParkPass/session.html
@@ -135,7 +135,7 @@
     </div>
 
     <!--! Modal -->
-    <div class="modal" id="tarif-modal">
+    <div class="modal" id="tarif-modal" data-y="65%">
         <div class="modal-inner">
             <!-- Title -->
             <h2 class="modal-title">Тарифы парковочной зоны:</h2>
