--- a/ParkPass/search-load.html
+++ b/ParkPass/search-load.html
@@ -58,6 +58,15 @@
             <!-- Text -->
             <p class="message-text">ищем информацию по вашей <br> парковочной сессии</p>
         </main>
+
+        <!-- Фикс прыжков на ios -->
+        <style>
+            /* Предотвращаем прыжки */
+            html, body {
+                height: 100%;
+                overflow: hidden;
+            }
+        </style>
     </div>
 
     <!--! Scripts -->
