--- a/ParkPass/session.html
+++ b/ParkPass/session.html
@@ -212,7 +212,7 @@
     </div>
 
     <!-- Чек уже использован -->
-    <div class="popup" id="wrong-condition-qr">
+    <div class="popup" id="used-qr">
         <!-- Content -->
         <div class="popup-content">
             <!-- Image -->
